--- a/docs/pages/spec.mdx
+++ b/docs/pages/spec.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'Zener Language Specification'
-description: 'Domain-specific language for describing PCB schematics'
+title: "Zener Language"
+description: "Hardware Description Language for PCB design"
 ---
 
-# Zener Language Specification
+# Specification
 
 ## Overview
 
