--- a/docs/pages/antenna_matching_network.mdx
+++ b/docs/pages/antenna_matching_network.mdx
@@ -68,8 +68,7 @@ Component(
 Layout(name = "SMA_Connector", path = "build/preview") # Don't use spaces in the name
 ```
 
-<Tip> Hovering over the pins in a component definition will tell you all the pins Zener expects you to define.
-![](/images/Pin_Hints.gif) </Tip>
+<Tip> Hovering over the pins in a component definition will tell you all the pins Zener expects you to define. ![](/images/Pin_Hints.gif) </Tip>
 
 <Info> There are other definable fields in the component; [check out the spec](https://docs.pcb.new/pages/spec#component)! </Info>
 
